--- a/local.properties
+++ b/local.properties
@@ -7,7 +7,7 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=/home/runner/Android/Sdk
+sdk.dir=/workspace/nix/.nix-profile/share/android-sdk
 
 # API Keys for AgriGrow
 OPENWEATHERMAP_API_KEY=${OPENWEATHERMAP_API_KEY}
